<resources>
    <string name="app_name">YGN-Store-Management</string>
    <string name="sales">Satış</string>
    <string name="purchasing">Satınalma</string>
    <string name="toplam_fiyat">Toplam Fiyat</string>
    <string name="reports">Raporlar</string>
    <string name="loading">Yükleniyor</string>
    <string name="please_wait">Lütfen Bekleyin</string>
    <string name="report_stock_amount">Stok Miktar Raporu</string>
    <string name="report_sales_detail_by_client_detail">Son 50 Satış (Cari Detaylı)</string>
    <string name="report_purchasing_detail_by_client_detail">Son 50 Satınalma (Cari Detaylı)</string>
    <string name="report_order_query">Sipariş Sorgulama</string>
    <string name="orderfiche_number">Sipariş Numarası</string>
    <string name="client">Cari</string>
    <string name="report_item_information">Ürün Sorgula</string>
    <string name="report_cashproceed_client_detail">Tahsilatlar</string>
    <string name="sales_card_view">Satış</string>
    <string name="purchasing_card_view">Satınalma</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>